// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Image component > handles image load successfully 1`] = `
<div>
  <div
    class="overflow-hidden "
    style="width: 200px; height: 150px;"
  >
    <img
      alt="Test image"
      height="150"
      src="test-image.jpg"
      style="display: block; transition: transform 200ms ease-in-out; transform: scale(1);"
      width="200"
    />
  </div>
</div>
`;

exports[`Image component > handles onError callback correctly 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
    style=""
  >
    Load failed
  </div>
</div>
`;

exports[`Image component > renders image with basic props 1`] = `
<div>
  <div
    class="overflow-hidden "
    style="width: 200px; height: 150px;"
  >
    <img
      alt="Test image"
      height="150"
      src="test-image.jpg"
      style="display: block; transition: transform 200ms ease-in-out; transform: scale(1);"
      width="200"
    />
  </div>
</div>
`;

exports[`Image component > shows custom error message when imgPath is not provided 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
  >
    Custom error
  </div>
</div>
`;

exports[`Image component > shows error message when image fails to load 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
    style=""
  >
    Failed to load
  </div>
</div>
`;

exports[`Image component > shows error message when no image path provided 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
  >
    No image
  </div>
</div>
`;

exports[`Image component > shows error when imgPath changes from valid to empty string 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
    style=""
  >
    Empty path error
  </div>
</div>
`;

exports[`Image component > shows error when imgPath changes from valid to invalid 1`] = `
<div>
  <div
    class="flex w-full h-full items-center justify-start"
    style=""
  >
    Image error
  </div>
</div>
`;

exports[`Image component > updates image when imgPath changes 1`] = `
<div>
  <div
    class="overflow-hidden "
    style="width: 200px; height: 150px;"
  >
    <img
      alt="Test image"
      height="150"
      src="second-image.jpg"
      style="display: block; transition: transform 200ms ease-in-out; transform: scale(1);"
      width="200"
    />
  </div>
</div>
`;
